# job-organize

back-end/: Cargo.toml
back-end/src/: main.rs
c-back-end/: a.out  data.txt  server.c
front-end/: index.html
front-end/js/: app.js
go-back-end/: go.mod  go.sum  main.go
go-back-end/jwt/: jwt.go
go-back-end/libraries/cors-master/: config.go  cors.go  cors_test.go
go-back-end/libraries/cors-master/_examples/: example.go
go-back-end/libraries/gin-1.10.1/: auth.go  context.go  context_test.go  debug_test.go  deprecated.go  deprecated_test.go  doc.go  errors.go  errors_test.go  gin.go  gin_test.go  go.mod  mode.go  mode_test.go  tree.go  tree_test.go  utils_test.go
go-back-end/libraries/gin-1.10.1/binding/: binding_test.go  form_mapping.go  json.go
go-back-end/libraries/gin-1.10.1/ginS/: gins.go
go-back-end/libraries/gin-1.10.1/render/: json.go  msgpack.go  render_test.go  text.go
go-back-end/sql/: schema.sql
notes/: index.html  notes.md
sql/: schema.sql
sqlite-db/: job-organize  job-organize.db
